# bak

./: .clang-format  .gitignore  CMakeLists.txt  README.md  bak.cpp  bak.sh
include/: bak.h
src/: backup.cc  bak.cc  main.cc
